--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.8",
     "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3",
