--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
     "formik": "^2.2.9",
     "normalize.css": "^8.0.1",
     "notiflix": "^3.2.6",
